--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevopago.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevopago.html
@@ -17,30 +17,34 @@
 				<div class="col-7 px-auto mx-auto text-center mt-3 mb-4 py-2 border-bottom">
 					<h2><i class="fas fa-coins fa-lg"></i>&nbsp;Registro pago</h2>
 				</div>
-				<form class="bg-white col-sm-7 p-auto m-auto border">
+				<form class="bg-white col-sm-7 p-auto m-auto border" th:action="@{/payment/guardar}" th:method="post" th:object="${payment}">
 					<div class="p-2">
 					  <div class="form-group">
 						  	<div class="p-3">
 						  		<div class="form-group">
 								    <label for="numerocliente">N° de cliente</label>
-								    <select class="form-control" id="numerocliente">
-									  <option>Seleccione una opción</option>
+								    <select th:field="*{customer}" name="customerNumber" class="form-control" id="customerNumber">
+									  <option th:each="c: ${customer}" th:value="${c.customerNumber}"><span th:text="${c.customerNumber}" ></span></option>
 									</select>								    
 							  	</div>
 						  		<div class="form-group">
-								    <label for="numeroverificacion">N° de verificación</label>
-								    <input type="text" class="form-control" id="numeroverificacion" placeholder="Ingresar el numero de verificacion">
+								    <label for="checkNumber">N° de verificación</label>
+								    <input th:field="*{checkNumber}" type="text" class="form-control" id="checkNumber" placeholder="Ingresar el numero de verificacion">
+								    <div class=" alert alert-danger" th:if="${#fields.hasErrors('checkNumber')}" th:errors="*{checkNumber}" ></div>
 						  		</div>
 						  		<div class="form-group">
-								    <label for="fechapago">Fecha de pago</label>
-								    <input type="date" class="form-control" id="fechapago" placeholder="Ingresar la fecha de pago">
+								    <label for="paymentDate">Fecha de pago</label>
+								    <input th:field="*{paymentDate}" type="date" class="form-control" id="paymentDate" placeholder="Ingresar la fecha de pago">
+								    <div class=" alert alert-danger" th:if="${#fields.hasErrors('paymentDate')}" th:errors="*{paymentDate}" ></div>
 						  		</div>
 							  	<div class="form-group">
-								    <label for="vendedorproducto">Cantidad</label>
-								    <input type="number" class="form-control" id="proveedor" placeholder="Ingresar cantidad a pagar">
+								    <label for="amount">Cantidad</label>
+								    <input th:field="*{amount}" type="number" class="form-control" id="amount" placeholder="Ingresar cantidad a pagar">
+								    <div class=" alert alert-danger" th:if="${#fields.hasErrors('amount')}" th:errors="*{amount}" ></div>
 						  		</div>
 							  	<div class="mt-4">
-							  		<button type="button" th:href = "@{/pago/nuevo}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear pago</button>
+							  		<button type="submit" th:href = "@{/payment/guardar}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Guardar pago</button>
+							  		<a th:href="@{/payment/lista}" class="btn bg-secondary btn-lg btn-block text-white"><i class="fas fa-ban"></i>&nbsp;Cancel</a>
 							  	</div>
 								  
 							</div>
