--- a/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
@@ -79,8 +79,8 @@
 							        <i class="fas fa-coins">&nbsp;</i>Payments
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink">New payment</a>
-									<a class="dropdown-item text-white hoverlink">List of payment</a>
+									<a class="dropdown-item text-white hoverlink" th:href="@{/payment/nuevo}">New payment</a>
+									<a class="dropdown-item text-white hoverlink" th:href="@{/payment/lista}">List of payment</a>
 								</div>
 						    </li>
 						    <li class="nav-item dropdown ">
