--- a/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
@@ -99,6 +99,41 @@
 					</div>
 				</div>
 			</nav>
+			
+			<!-- MENSAJES -->
+			
+			<!--MENSAJE DE EXITO-->
+			<div class="alert alert-success alert-dismissible fade show" th:if="${success != null}" role="alert">
+			  <label th:text="${success}"></label>
+			  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+			    <span aria-hidden="true">&times;</span>
+			  </button>
+			</div>
+					
+			<!--MENSAJE DE ERROR-->
+			<div class="alert alert-danger alert-dismissible fade show" th:if="${error != null}" role="alert">
+			  <label th:text="${error}"></label>
+			  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+			    <span aria-hidden="true">&times;</span>
+			  </button>
+			</div>
+			
+			<!--MENSAJE DE ADVERTENCIA-->
+			<div class="alert alert-warning alert-dismissible fade show" th:if="${warning != null}" role="alert">
+			  <label th:text="${warning}"></label>
+			  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+			    <span aria-hidden="true">&times;</span>
+			  </button>
+			</div>
+			
+			<!--MENSAJE DE INFORMACION-->
+			<div class="alert alert-info alert-dismissible fade show" th:if="${info != null}" role="alert">
+			  <label th:text="${info}"></label>
+			  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+			    <span aria-hidden="true">&times;</span>
+			  </button>
+			</div>
+			
 		</header>
 	</body>
 </html>
