--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listaroficinas.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listaroficinas.html
@@ -10,17 +10,24 @@
 	</head>
 	<body>
 	
+		<!-- HEADER -->
 		<header th:insert="layout/header :: header"></header>
 		
 		<div class="container mb-5">
 			<div class="row">
 				<div class="col-12 mt-3 mb-3 py-2 d-flex bd-highlight mb-3">
+					
+					<!-- TITULO -->
 					<div class="p-2 bd-highlight">
 						<h2><i class="far fa-building fa-lg"></i>&nbsp;List of offices</h2>
 					</div>
+					
+					<!-- BOTON CREAR OFICINA -->
 					<div class="p-2 bd-highlight">
 						<a class="btn btn-info" th:href="@{/office/new}"><i class="fas fa-plus"></i>&nbsp;Create office</a>
 					</div>
+					
+					<!-- FORMULARIO DE BUSQUEDA -->
 					<div class ="ml-auto p-2 bd-highlight">
 						<form class="form-inline" th:action="@{/office/search}" th:method="get">
 						   <input class="form-control mr-sm-2" type="text" id="var" name="var" placeholder="Search" aria-label="Search">
@@ -28,8 +35,12 @@
 						</form>
 					</div>
 				</div>
+				
+				<!-- TABLA -->
 				<table class="table table-striped col-sm-12 bg-light border text-center">
 				  <thead>
+				  
+				 	<!-- CABECERA -->
 				    <tr class="bg-buebird text-white">
 				      <th scope="col">Code</th>
 				      <th scope="col">City</th>
@@ -43,6 +54,8 @@
 				    </tr>
 				  </thead>
 				  <tbody>
+				  
+				  	<!-- CONTENIDO -->
 				    <tr th:each="o: ${offices}">
 				      <td th:text="${o.officeCode}"></td>
 				      <td th:text="${o.city}"></td>
@@ -52,6 +65,8 @@
 				      <td th:text="${o.country}"></td>
 				      <td th:text="${o.postalCode}"></td>
 				      <td th:text="${o.territory}"></td>
+				      
+				      <!-- BOTONES EDITAR Y BORRAR -->
 				      <td>
 				      	<a class="btn btn-warning" th:href="@{/office/edit/}+${o.officeCode}"><i class="fas fa-edit"></i></a>
 				      	<a class="btn btn-danger" th:href="@{/office/delete/}+${o.officeCode}"><i class="far fa-trash-alt"></i></a>
@@ -62,6 +77,7 @@
 			</div>
 		</div>
 		
+		<!-- FOOTER -->
 		<footer class="fixed-bottom" th:insert="layout/footer :: footer"></footer>
 		
 		<script type="text/javascript" th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
