--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevaorden.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevaorden.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
-	<title>Página principal</title>
+	<title>Solivex - Facturation system</title>
 	<link rel="stylesheet" th:href="@{/webjars/bootstrap/4.6.0/css/bootstrap.min.css}">
 	<link rel="stylesheet" th:href="@{/css/styles.css}">
 	<link rel="stylesheet" th:href="@{/webjars/fortawesome__fontawesome-free/5.15.3/css/all.css}">
