--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevopago.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevopago.html
@@ -21,16 +21,18 @@
 					<div class="p-2">
 					  <div class="form-group">
 						  	<div class="p-3">
-						  		<div class="form-group">
-								    <label for="numerocliente">N° de cliente</label>
-								    <select th:field="*{customer}" name="customerNumber" class="form-control" id="customerNumber">
-									  <option th:each="c: ${customer}" th:value="${c.customerNumber}"><span th:text="${c.customerNumber}" ></span></option>
+						 <div class="form-group">
+						  	<label for="numerocliente">N° de cliente</label>
+								    <select th:field="*{id.customerNumber}" name="customerNumber" class="form-control" id="customerNumber">
+									  <option th:each="c: ${customer}" th:value="${c.customerNumber}">
+									  	<span th:text="${c.customerNumber}" ></span>
+									  </option>
 									</select>								    
 							  	</div>
 						  		<div class="form-group">
 								    <label for="checkNumber">N° de verificación</label>
-								    <input th:field="*{checkNumber}" type="text" class="form-control" id="checkNumber" placeholder="Ingresar el numero de verificacion">
-								    <div class=" alert alert-danger" th:if="${#fields.hasErrors('checkNumber')}" th:errors="*{checkNumber}" ></div>
+								    <input th:field="*{id.checkNumber}" type="text" class="form-control" id="checkNumber" placeholder="Ingresar el numero de verificacion">
+								    <div class=" alert alert-danger" th:if="${#fields.hasErrors('id.checkNumber')}" th:errors="*{id.checkNumber}" ></div>
 						  		</div>
 						  		<div class="form-group">
 								    <label for="paymentDate">Fecha de pago</label>
@@ -46,7 +48,6 @@
 							  		<button type="submit" th:href = "@{/payment/guardar}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Guardar pago</button>
 							  		<a th:href="@{/payment/lista}" class="btn bg-secondary btn-lg btn-block text-white"><i class="fas fa-ban"></i>&nbsp;Cancel</a>
 							  	</div>
-								  
 							</div>
 						</div>
 					</div>
